[tool.poetry]
name = "qrev-cache"
version = "0.1.0"
description = ""
authors = ["leeparnell <152523161+leeparnell@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "qrev_cache" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.3.4"
arrow = "^1.3.0"
dateparser = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
toml-sort = "^0.23.1"
types-dateparser = "^1.2.0.20240420"


[tool.poetry.group.mongo.dependencies]
pymongo = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
