[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-cache"
version = "0.5.2"
description = "Easy Cache using local files, in memory, or MongoDB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.7.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
mongo = [
    "pymongo>=4.11",
]
dev = [
    "pi-conf>=0.8.5.2",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "types-dateparser>=1.2.0.20240420",
]

[[tool.mypy.overrides]]
module = ["dateutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::pytest.PytestAssertRewriteWarning"]
